# BACCify

./: .gitignore  CMakeLists.txt
cmake/: copy_files_if_not_exist.cmake
generator/: main.py
src/: CMakeLists.txt  Main.cpp
